--- a/plweb/500/500.html
+++ b/plweb/500/500.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>plweb Down</title>
 </head>
 <body>
 
-<h1>plweb 502</h1>
+<h1>plweb not available</h1>
 
 </body>
 </html> 
